omx/gstomxvideo.h
@@ -55,6 +55,8 @@ gst_omx_video_negotiation_map_free (GstOMXVideoNegotiationMap * m);
 GstVideoCodecFrame *
 gst_omx_video_find_nearest_frame (GstOMXBuffer * buf, GList * frames);
 
+OMX_U32 gst_omx_video_calculate_framerate_q16 (GstVideoInfo * info);
+
 G_END_DECLS
 
 #endif /* __GST_OMX_VIDEO_H__ */
