omx/gstomxvideodec.c
@@ -2233,6 +2233,7 @@ gst_omx_video_dec_set_format (GstVideoDecoder * decoder,
   gboolean is_format_change = FALSE;
   gboolean needs_disable = FALSE;
   OMX_PARAM_PORTDEFINITIONTYPE port_def;
+  OMX_U32 framerate_q16 = gst_omx_video_calculate_framerate_q16 (info);
 
   self = GST_OMX_VIDEO_DEC (decoder);
   klass = GST_OMX_VIDEO_DEC_GET_CLASS (decoder);
@@ -2256,8 +2257,7 @@ gst_omx_video_dec_set_format (GstVideoDecoder * decoder,
   is_format_change |= port_def.format.video.nFrameHeight != info->height;
   is_format_change |= (port_def.format.video.xFramerate == 0
       && info->fps_n != 0)
-      || (port_def.format.video.xFramerate !=
-      (info->fps_n << 16) / (info->fps_d));
+      || (port_def.format.video.xFramerate != framerate_q16);
   is_format_change |= (self->codec_data != state->codec_data);
   if (klass->is_format_change)
     is_format_change |=
@@ -2291,10 +2291,7 @@ gst_omx_video_dec_set_format (GstVideoDecoder * decoder,
 
   port_def.format.video.nFrameWidth = info->width;
   port_def.format.video.nFrameHeight = info->height;
-  if (info->fps_n == 0)
-    port_def.format.video.xFramerate = 0;
-  else
-    port_def.format.video.xFramerate = (info->fps_n << 16) / (info->fps_d);
+  port_def.format.video.xFramerate = framerate_q16;
 
   GST_DEBUG_OBJECT (self, "Setting inport port definition");
 
